--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1,20 +1,20 @@
 {
-  "HOME": "Home",
-  "INFO": "Info",
-  "SETTINGS": "Settings",
-  "HOWTO": "Usage",
-  "LANG": "Language",
-  "WELCOME": "Welcome to Passenger",
-  "CHECK": "Check the Weather!",
-  "ONHOME": "On the Home Page is one big button.",
-  "ONTAP": "On Launch/Resume/Tap",
-  "TAPTXT": "When Passenger first launches, when it resumes after having been hidden, or when you click the button it will determine your phone's current position, and let you know it there is any dangerous weather ahead or in your immediate area that you need to worry about. This will also happen when you go back to the Home Page from the About Page, or when you re-open the app when it has been hidden. (actual device data)",
-  "SWIPELEFT": "Swipe Left",
-  "SWPLFTTXT": "Passenger will let you know that you are approaching an area where there is a Flash Flood Warning in about 15 minutes. (simulated device data)",
-  "SWIPERIGHT": "Swipe Right",
-  "SWPRGTTXT": "Passenger will let you know that there is a Flash Flood Warning in your immediate area. (simulated device data)",
-  "GOOGASS": "If you have Google Assistant turned on, and set so that you can wake up the phone with your voice, you can use Passenger entirely hands free by saying \"Ok Google. Launch Passenger.\"",
-  "VOICE": "Voice",
-  "MALE": "Male",
-  "FEMALE": "Female"
+  "HOME": "Página de Inicio",
+  "INFO": "Información",
+  "SETTINGS": "Configuración",
+  "HOWTO": "Uso",
+  "LANG": "Lenguaje",
+  "WELCOME": "Bienvenidos A Pasajero",
+  "CHECK": "Verificar el clima!",
+  "ONHOME": "En la página de inicio hay un gran botón.",
+  "ONTAP": "Al Lanzar/Continuar/Pulsar",
+  "TAPTXT": "Cuando Pasajero se lanza por primera vez, cuando se reanuda después de haber estado oculto, o cuando haces clic en el botón, determinará la posición actual de su teléfono, y te lo hará saber si hay algún tiempo peligroso por delante o en tu área inmediata de la que debe preocuparse.  Esto también sucederá cuando regrese a la página de inicio desde la página Acerca De, o cuando se vuelva a abrir la aplicación cuando se ha ocultado. (datos reales del dispositivo)",
+  "SWIPELEFT": "Deslizar a la izquierda",
+  "SWPLFTTXT": "Pasajero le informará que se acerca a un área donde hay una advertencia de inundación repentina en unos 15 minutos. (datos simulados del dispositivo)",
+  "SWIPERIGHT": "Deslizar a la derecha",
+  "SWPRGTTXT": "Pasajero le informará que se acerca a un área donde hay una advertencia de inundación repentina en tu área inmediata. (datos simulados del dispositivo)",
+  "GOOGASS": "Si tienes Google Assistant activado y configurado para que puedas despertar el teléfono con tu voz, puedes usar el pasajero completamente manos libres diciendo \"OK Google. Lanza Pasajero.\"",
+  "VOICE": "Voz",
+  "MALE": "Masculino",
+  "FEMALE": "Femenino"
 }
