--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,20 +1,20 @@
 {
-  "HOME": "Home",
-  "INFO": "Info",
-  "SETTINGS": "Settings",
+  "HOME": "Page d'accueil",
+  "INFO": "Information",
+  "SETTINGS": "Paramètres",
   "HOWTO": "Usage",
-  "LANG": "Language",
-  "WELCOME": "Welcome to Passenger",
-  "CHECK": "Check the Weather!",
-  "ONHOME": "On the Home Page is one big button.",
-  "ONTAP": "On Launch/Resume/Tap",
-  "TAPTXT": "When Passenger first launches, when it resumes after having been hidden, or when you click the button it will determine your phone's current position, and let you know it there is any dangerous weather ahead or in your immediate area that you need to worry about. This will also happen when you go back to the Home Page from the About Page, or when you re-open the app when it has been hidden. (actual device data)",
-  "SWIPELEFT": "Swipe Left",
-  "SWPLFTTXT": "Passenger will let you know that you are approaching an area where there is a Flash Flood Warning in about 15 minutes. (simulated device data)",
-  "SWIPERIGHT": "Swipe Right",
-  "SWPRGTTXT": "Passenger will let you know that there is a Flash Flood Warning in your immediate area. (simulated device data)",
-  "GOOGASS": "If you have Google Assistant turned on, and set so that you can wake up the phone with your voice, you can use Passenger entirely hands free by saying \"Ok Google. Launch Passenger.\"",
-  "VOICE": "Voice",
-  "MALE": "Male",
-  "FEMALE": "Female"
+  "LANG": "Langage",
+  "WELCOME": "Bienvenue à Passager",
+  "CHECK": "Vérifiez la météo!",
+  "ONHOME": "Sur la page d'accueil, il y a un gros bouton.",
+  "ONTAP": "Lancer/Résumer/Tapoter",
+  "TAPTXT": "Lorsque le Passager est lancé pour la première fois, lorsqu'il reprend après avoir été masqué ou lorsque vous cliquez sur le bouton, il détermine la position actuelle de votre téléphone et vous informe qu'il y a un temps dangereux à venir ou dans votre zone immédiate. Cela se produit également lorsque vous revenez à la page d'accueil à partir de la page À propos ou lorsque vous rouvrez l'application lorsqu'elle a été masquée. (données réelles de l'appareil)",
+  "SWIPELEFT": "Glisser à gauche",
+  "SWPLFTTXT": "Le passager vous indiquera que vous vous approchez d'une zone où il y a un avertissement d'inondation dans environ 15 minutes. (données de périphérique simulées)",
+  "SWIPERIGHT": "Glisser à droite",
+  "SWPRGTTXT": "Le passager vous fera savoir qu'il y a un avertissement d'inondation instantané dans votre région immédiate. (données de périphérique simulées)",
+  "GOOGASS": "Si vous avez activé Google Assistant et configuré pour que vous puissiez réveiller le téléphone avec votre voix, vous pouvez utiliser Passenger entièrement mains libres en disant \"Ok Google. Lancez Passager.\"",
+  "VOICE": "Voix",
+  "MALE": "Mâle",
+  "FEMALE": "Femelle"
 }
