--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -1,20 +1,20 @@
 {
-  "HOME": "Home",
-  "INFO": "Info",
-  "SETTINGS": "Settings",
-  "HOWTO": "Usage",
-  "LANG": "Language",
-  "WELCOME": "Welcome to Passenger",
-  "CHECK": "Check the Weather!",
-  "ONHOME": "On the Home Page is one big button.",
-  "ONTAP": "On Launch/Resume/Tap",
-  "TAPTXT": "When Passenger first launches, when it resumes after having been hidden, or when you click the button it will determine your phone's current position, and let you know it there is any dangerous weather ahead or in your immediate area that you need to worry about. This will also happen when you go back to the Home Page from the About Page, or when you re-open the app when it has been hidden. (actual device data)",
-  "SWIPELEFT": "Swipe Left",
-  "SWPLFTTXT": "Passenger will let you know that you are approaching an area where there is a Flash Flood Warning in about 15 minutes. (simulated device data)",
-  "SWIPERIGHT": "Swipe Right",
-  "SWPRGTTXT": "Passenger will let you know that there is a Flash Flood Warning in your immediate area. (simulated device data)",
-  "GOOGASS": "If you have Google Assistant turned on, and set so that you can wake up the phone with your voice, you can use Passenger entirely hands free by saying \"Ok Google. Launch Passenger.\"",
-  "VOICE": "Voice",
-  "MALE": "Male",
-  "FEMALE": "Female"
+  "HOME": "Casa",
+  "INFO": "Informazione",
+  "SETTINGS": "Regolazione",
+  "HOWTO": "Uso",
+  "LANG": "Lingua",
+  "WELCOME": "Benvenuti a Passeggero",
+  "CHECK": "Controlla il tempo!",
+  "ONHOME": "Nella home page è un pulsante grande.",
+  "ONTAP": "Lanciare/Riprendere/Picchiettare",
+  "TAPTXT": "Quando il passeggero prima lancia, quando riprende dopo essere stato nascosto, o quando si fa clic sul pulsante, determinerà la posizione corrente del telefono e vi farà sapere che c'è tempo pericoloso in anticipo o nella tua zona immediata per cui devi preoccuparti. Ciò avverrà anche quando tornerai alla Home Page dalla pagina delle informazioni o quando riaprirai l'applicazione quando è stata nascosta. (dati effettivi del dispositivo)",
+  "SWIPELEFT": "Scorri a sinistra",
+  "SWPLFTTXT": "Il passeggero vi farà sapere che si sta avvicinando ad una zona in cui vi è un avvertimento Flash Flood in circa 15 minuti. (dati dispositivo simulati)",
+  "SWIPERIGHT": "Scorri a destra",
+  "SWPRGTTXT": "Il passeggero vi farà sapere che vi è un avvertimento Flash Flood nella tua zona immediata. (dati dispositivo simulati)",
+  "GOOGASS": "Se hai attivato Google Assistant e impostato in modo che tu possa svegliare il telefono con la tua voce, puoi usare il passeggero completamente a mani libere dicendo \"Ok Google. Lanci Passeggero.\"",
+  "VOICE": "Voce",
+  "MALE": "Maschio",
+  "FEMALE": "Femmina"
 }
