--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -5,6 +5,7 @@
   "HOWTO": "ご使用方法",
   "LANG": "言語",
   "WELCOME": "パッセンジャーへようこそ",
+  "WELCOMEMSG": "言語を選択して、[ホーム]ボタンをクリックしてください。",
   "CHECK": "天気を調べよう!",
   "ONHOME": "ホームページにたった一つの大きなボタンがあります。",
   "ONTAP": "開き/再開き/ボタンを押す",
@@ -16,5 +17,6 @@
   "GOOGASS": "もしGoogleアシスタントをご利用できるなら、「OK Google、パッセンジャーをひらけ」と言えば、完全に手放しで使う事ができます。",
   "VOICE": "声",
   "MALE": "男性",
-  "FEMALE": "女性"
+  "FEMALE": "女性",
+  "RATE": "危険レベルを評価して"
 }
